[Cairo] canvas/philip/tests/2d.drawImage.self.2.html test failing on ports using Cairo https://bugs.webkit.org/show_bug.cgi?id=93244

Patch by Dominik Röttsches <dominik.rottsches@intel.com> on 2012-08-13
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Similar to Skia's and Qt's ImageBuffer implementation we need to make sure that buffers
for images are copied when the destination canvas is identical to the
image buffer's context. This happens mostly in JS calls to canvas' drawImage method.
For now fixing the drawImage case, drawPattern case is handled in bug 93854.

No new tests, covered by canvas/philip/tests/2d.drawImage.self.2.html

* platform/graphics/cairo/ImageBufferCairo.cpp:
(WebCore::ImageBuffer::draw): Making sure buffer is copied when source and destination contexts are identical.

LayoutTests:

Unskipping canvas/philip/tests/2d.drawImage.self.2.html for GTK and EFL now that it's working.

* platform/efl/Skipped:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/111707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125432 268f45cc-cd09-0410-ab3c-d52691b4dbfc